<resources>
    <string-array name="rank_title_array">
        <item>ME1</item>
        <item>ME2</item>
        <item>ME3</item>
        <item>ME4</item>
        <item>ME5</item>
        <item>ME6</item>
        <item>DX9</item>
        <item>DX10</item>
        <item>DX11</item>
        <item>LCP</item>
        <item>CPL</item>
        <item>CFC</item>
        <item>3SG</item>
        <item>2SG</item>
        <item>1SG</item>
        <item>SSG</item>
        <item>MSG</item>
        <item>Mr</item>
        <item>Mrs</item>
        <item>Miss</item>
        <item>Ms</item>
        <item>Dr</item>
        <item>Prof</item>
    </string-array>
    <string-array name="purpose_array">
        <item>Cleaning</item>
        <item>Maintenance</item>
        <item>Meeting</item>
        <item>Visit</item>
        <item>Others (Please specify in Remarks)</item>
    </string-array>
    <string-array name="vehicle_type_array">
        <item>Car</item>
        <item>Lorry</item>
        <item>Van</item>
    </string-array>
    <string-array name="poc_corresponding_rank">
        <item>COL</item>
        <item>MSG</item>
        <item>ME3</item>
        <item>ME4</item>
        <item>ME5</item>
    </string-array>
    <string-array name="poc_name_array">
        <item>Choo Le Cong</item>
        <item>Teo Wei Liang Lewis</item>
        <item>Erica Lum</item>
        <item>Timothy Lok</item>
        <item>Tiffany Quek</item>
    </string-array>
    <string name="app_name">OSClearance</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="nric">NRIC</string>
    <string name="rank">Rank/Title</string>
    <string name="name">Full Name (as in NRIC)</string>
    <string name="fmn">Formation</string>
    <string name="unit">Unit</string>
    <string name="company">Company</string>
    <string name="hp_num">HP Number</string>
    <string name="office_num">Office Number</string>
    <string name="purpose">Purpose</string>
    <string name="remarks">Remarks</string>
    <string name="poc_rank">POC Rank</string>
    <string name="poc_name">POC Name</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="vehicle_num">Vehicle License Number</string>
    <string name="submit">Submit</string>
    <string name="empty_field">Please fill up the required fields</string>
    <string name="rank_title_prompt">Please select your rank/title</string>
    <string name="purpose_prompt">Please select your purpose of visit</string>
    <string name="poc_name_prompt">Please select your POC</string>
    <string name="poc_rank_prompt">Please select your POC\'s rank</string>
    <string name="vehicle_prompt">Please select your vehicle type</string>
    <string name="date_button">Click to select date(s) of visit</string>
    <string name="init_date">--/--/-- to --/--/--</string>
    <string name="login">Login</string>
    <string name="amend">Amend</string>
    <string name="confirm">Confirm</string>
    <string name="check_car">Will you be driving?</string>
    <string name="success">Submission Successful!</string>
    <string name="exit">Exit</string>
</resources>
